added clearfix to col, now we have height for col

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
             <div class="cards">
                 <!-- Riga 1 -->
-                <div class="row row-1">
+                <div class="row row-1 clearfix">
                    <div class="col col-1">
                         <img src="./img/female1.png" alt="IMG non disponibile">
                         <div class="infos">
@@ -56,7 +56,7 @@
                 <!-- fine riga 1 -->
         
                 <!-- Riga 2 -->
-                <div class="row row-2">
+                <div class="row row-2 clearfix">
                     <div class="col col-1">
                         <img src="./img/male2.png" alt="IMG non disponibile">
                         <div class="infos">
